[package]
name = "test_lang_vm"
version = "0.1.0"
edition = "2021"
authors = ["Chris (Clinery) <clinery8237@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Clinery1/test_lang"
license = "MIT OR Apache-2.0"


[dependencies]
fnv = "1.0.7"
num_enum = "0.7.0"
test_lang_common = { version = "0.1.0", path = "../common" }
